# tempsystem

./: .gitignore  CMakeLists.txt  Makefile  README.md
.forgejo/workflows/: build.yaml  build_image.yaml  docker_build.yaml
docker/: Dockerfile  pacman.conf  setup-inside.sh  zshrc
include/: docker_api.hpp  info.hpp  logging.hpp
makepkg/: PKGBUILD
src/: docker_api.cpp  main.cpp
